build: set up nativewind for example app

--- a/example/app.json
+++ b/example/app.json
@@ -25,7 +25,8 @@
       "package": "herouinative.example"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     }
   }
 }
