--- a/example/package.json
+++ b/example/package.json
@@ -12,15 +12,20 @@
     "@expo/metro-runtime": "~5.0.4",
     "expo": "~53.0.13",
     "expo-status-bar": "~2.2.3",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react-native-builder-bob": "^0.40.12",
-    "react-native-monorepo-config": "^0.1.9"
+    "react-native-monorepo-config": "^0.1.9",
+    "tailwindcss": "^3.4.17"
   },
   "private": true
 }
