build: add prettier-plugin-organize-imports

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-builder-bob": "^0.40.12",
@@ -128,7 +129,10 @@
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "es5",
-    "useTabs": false
+    "useTabs": false,
+    "plugins": [
+      "prettier-plugin-organize-imports"
+    ]
   },
   "react-native-builder-bob": {
     "source": "src",
