--- a/example/app.json
+++ b/example/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "example",
     "slug": "example",
+    "scheme": "example",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,6 +28,7 @@
     "web": {
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
-    }
+    },
+    "plugins": ["expo-router"]
   }
 }
