--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -2,5 +2,6 @@
   "extends": "../tsconfig",
   "compilerOptions": {
     // Avoid expo-cli auto-generating a tsconfig
+    "typeRoots": ["./node_modules/@types", "./types"]
   }
 }
