--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Beautiful, fast and modern React Native UI library",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
+  "source": "./src/index.tsx",
   "exports": {
     ".": {
       "source": "./src/index.tsx",
@@ -77,17 +78,24 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
+    "nativewind": "^4.1.23",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-builder-bob": "^0.40.12",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
     "release-it": "^17.10.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
+    "nativewind": ">=4.0",
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-reanimated": ">=3",
+    "react-native-safe-area-context": ">=5"
   },
   "workspaces": [
     "example"
