--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@release-it/conventional-changelog": "^9.0.2",
     "@types/jest": "^29.5.5",
     "@types/react": "^19.0.12",
+    "babel-plugin-module-resolver": "^5.0.2",
     "commitlint": "^19.6.1",
     "del-cli": "^5.1.0",
     "eslint": "^9.22.0",
@@ -87,7 +88,6 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "release-it": "^17.10.0",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
