chore: add switch primitives

--- a/components.json
+++ b/components.json
@@ -1,6 +1,7 @@
 {
   "aliases": {
     "components": "@/components",
-    "lib": "@/lib"
+    "helpers": "@/helpers",
+    "primitives": "@/primitives"
   }
 }
