--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
+    "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^4.1.0",
@@ -88,6 +89,7 @@
     "react-native-builder-bob": "^0.40.12",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
+    "react-native-svg": "^15.12.0",
     "release-it": "^17.10.0",
     "tailwind-merge": "^3.3.1",
     "typescript": "^5.8.3"
