--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-native-svg": "^15.12.0",
     "release-it": "^17.10.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
