--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "expo": "~53.0.13",
     "expo-constants": "~17.1.7",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
