--- a/package.json
+++ b/package.json
@@ -123,6 +123,9 @@
       "commitMessage": "chore: release ${version}",
       "tagName": "v${version}"
     },
+    "hooks": {
+      "after:bump": "npx auto-changelog -p"
+    },
     "npm": {
       "publish": true
     },
