--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,16 +21,16 @@ jobs:
           node-version: lts/*
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --immutable
 
       - name: Run lint
-        run: npm run lint
+        run: yarn lint
 
       - name: Run typecheck
-        run: npm run typecheck
+        run: yarn typecheck
 
       - name: Run tests
-        run: npm test
+        run: yarn test
 
       - name: Initialize NPM Config
         run: npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
@@ -38,7 +38,7 @@ jobs:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - name: Publish to npm
-        run: npm run release --ci
+        run: yarn release --ci
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
