chore: enhance release workflow with Git user setup and build step

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
       "after:bump": "npx auto-changelog -p"
     },
     "npm": {
+      "preRelease": "alpha",
       "publish": true
     },
     "github": {
