--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,11 +41,6 @@ jobs:
       - name: Build library
         run: yarn clean && yarn prepare
 
-      - name: Run bumpp for versioning
-        run: npm run release
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
       - name: Publish to npm
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
@@ -53,6 +48,7 @@ jobs:
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
-      - run: npx changelogithub
+      - name: Create GitHub Release
+        run: npx changelogithub
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
