--- a/components.json
+++ b/components.json
@@ -2,6 +2,7 @@
   "aliases": {
     "components": "@/components",
     "helpers": "@/helpers",
-    "primitives": "@/primitives"
+    "primitives": "@/primitives",
+    "theme": "@/theme"
   }
 }
