--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli lib",
     "prepare": "bob build",
-    "release": "bumpp"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path .",
+    "release": "bumpp --execute='yarn changelog' --all"
   },
   "keywords": [
     "react-native",
@@ -78,6 +79,7 @@
     "changelogithub": "^13.16.0",
     "clsx": "^2.1.1",
     "commitlint": "^19.6.1",
+    "conventional-changelog": "^7.1.1",
     "del-cli": "^5.1.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
