--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-native-svg": "^15.12.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.0.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
