--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
-    "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^4.1.0",
@@ -100,14 +99,14 @@
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
+    "nativewind": "^4.1.23",
     "react": "*",
     "react-native": "*",
-    "nativewind": "^4.1.23",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "^15.12.1",
-    "tailwind-variants": "^2.0.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.0.1"
   },
   "workspaces": [
     "example"
