--- a/example/package.json
+++ b/example/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web -c"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.1",
     "@expo/metro-runtime": "~5.0.4",
     "clsx": "^2.1.1",
     "expo": "~53.0.13",
     "expo-constants": "~17.1.7",
+    "expo-font": "^13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
