--- a/example/app.json
+++ b/example/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "example",
-    "slug": "example",
-    "scheme": "example",
+    "name": "HeroUI Native",
+    "slug": "herouinative",
+    "scheme": "herouinative",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
