--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
