--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -2,5 +2,11 @@
   "extends": "../tsconfig",
   "compilerOptions": {
     // Avoid expo-cli auto-generating a tsconfig
-  }
+    "skipLibCheck": true,
+    "paths": {
+      "heroui-native": ["../lib/typescript/src/index"]
+    }
+  },
+  "include": ["src/**/*", "nativewind-env.d.ts", "*.js"],
+  "exclude": ["node_modules"]
 }
