--- a/example/package.json
+++ b/example/package.json
@@ -30,7 +30,7 @@
     "react-native-svg": "^15.12.1",
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^2.1.0"
+    "tailwind-variants": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
