--- a/package.json
+++ b/package.json
@@ -101,19 +101,19 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "^15.12.0",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^2.0.1",
+    "tailwind-variants": "1.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
-    "nativewind": "^4.1.23",
     "react": "*",
     "react-native": "*",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "^15.12.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^2.0.1"
+    "nativewind": "^4.1.23",
+    "tailwind-variants": "1.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "workspaces": [
     "example"
