--- a/package.json
+++ b/package.json
@@ -106,14 +106,14 @@
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
+    "nativewind": "^4.1.23",
     "react": "*",
     "react-native": "*",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "^15.12.1",
-    "nativewind": "^4.1.23",
-    "tailwind-variants": "1.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "1.0.0"
   },
   "workspaces": [
     "example"
